correções no texto

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li class="intro__lista__item"><a href="#seg" class="intro__lista__link">Segurança da informação</a></li>
                     <li class="intro__lista__item"><a href="#hosp" class="intro__lista__link">Hospedagem e domínio</a></li>
                     <li class="intro__lista__item"><a href="#forum" class="intro__lista__link">Fóruns (surface)</a></li>
-                    <li class="intro__lista__item"><a href="#notic" class="intro__lista__link">Notícias (surface)</a></li>
+                    <li class="intro__lista__item"><a href="#notic" class="intro__lista__link">Notícias</a></li>
                     <li class="intro__lista__item"><a href="#deepw" class="intro__lista__link">DeepWeb (onion)</a></li>
                     <li class="intro__lista__item"><a href="#diver" class="intro__lista__link">Diversos</a></li>
                 </ol>
@@ -274,7 +274,7 @@
                     </ul>
                 </div>
                 <div class="secao__conteudo">      
-                    <h3 class="conteudo__subtitulo">Outros</h3>
+                    <h3 class="conteudo__subtitulo">Misc</h3>
                     <ul class="conteudo__lista">
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://meyerweb.com/eric/tools/css/reset/" target="_blank">Reset CSS</a></li>
                     </ul>
@@ -321,7 +321,7 @@
                     </ul>
                 </div>
                 <div class="secao__conteudo">      
-                    <h3 class="conteudo__subtitulo">Outros</h3>
+                    <h3 class="conteudo__subtitulo">Misc</h3>
                     <ul class="conteudo__lista">
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.remove.bg/" target="_blank">remove background</a></li>
                     </ul>
@@ -347,7 +347,7 @@
                     </ul>
                 </div>
                 <div class="secao__conteudo">      
-                    <h3 class="conteudo__subtitulo">Outros</h3>
+                    <h3 class="conteudo__subtitulo">Misc</h3>
                     <ul class="conteudo__lista">
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://replit.com/" target="_blank">Replit</a></li>
                     </ul>
@@ -393,7 +393,7 @@
                     </ul>
                 </div>
                 <div class="secao__conteudo">      
-                    <h3 class="conteudo__subtitulo">Programas &#47;ferramentas</h3>
+                    <h3 class="conteudo__subtitulo">Programas &#47; ferramentas</h3>
                     <ul class="conteudo__lista">
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://etcher.balena.io/" target="_blank">balenaEtcher</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://rufus.ie/" target="_blank">Rufus</a></li>
@@ -407,7 +407,7 @@
                     </ul>
                 </div>
                 <div class="secao__conteudo">      
-                    <h3 class="conteudo__subtitulo">Outros</h3>
+                    <h3 class="conteudo__subtitulo">Misc</h3>
                     <ul class="conteudo__lista">
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://distrosea.com/" target="_blank">DistroSea</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://github.com/FabioLolix/LinuxTimeline" target="_blank">HiLinux Distribution Timeline</li>
@@ -452,7 +452,7 @@
                     </ul>
                 </div>
                 <div class="secao__conteudo">      
-                    <h3 class="conteudo__subtitulo">Outros</h3>
+                    <h3 class="conteudo__subtitulo">Misc</h3>
                     <ul class="conteudo__lista">
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://db-engines.com/en/" target="_blank">DB-Engines</a></li>
                     </ul>
@@ -475,7 +475,7 @@
                     </ul>
                 </div>
                 <div class="secao__conteudo">      
-                    <h3 class="conteudo__subtitulo">Tools</h3>
+                    <h3 class="conteudo__subtitulo">Ferramentas</h3>
                     <ul class="conteudo__lista">
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.openwall.com/john/" target="_blank">John the Ripper password cracker</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.metasploit.com/" target="_blank">metasploit</a></li>
@@ -485,7 +485,7 @@
                     </ul>
                 </div>
                 <div class="secao__conteudo">      
-                    <h3 class="conteudo__subtitulo">CTF, lab e bug bounty</h3>
+                    <h3 class="conteudo__subtitulo">CTF, Lab e Bug Bounty</h3>
                     <ul class="conteudo__lista">
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.hackthebox.com/" target="_blank">HackTheBox</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://tryhackme.com/" target="_blank">TryHackMe</a></li>
@@ -533,7 +533,7 @@
             </div>
 
             <div class="conteudo__secao">
-                <h2 class="secao__titulo" id="notic">Notícias (surface)</h2>
+                <h2 class="secao__titulo" id="notic">Notícias</h2>
                 <div class="secao__conteudo">      
                     <h3 class="conteudo__subtitulo">Português</h3>
                     <ul class="conteudo__lista">
@@ -576,7 +576,7 @@
                     </ul>
                 </div>
                 <div class="secao__conteudo">      
-                    <h3 class="conteudo__subtitulo">Search Engines</h3>
+                    <h3 class="conteudo__subtitulo">Motores de busca</h3>
                     <ul class="conteudo__lista">
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="http://juhanurmihxlp77nkq76byazcldy2hlmovfu2epvl5ankdibsot4csyd.onion/" target="_blank">http://juhanurmihxlp77nkq76byazcldy2hlmovfu2epvl5ankdibsot4csyd.onion/</a> &#45; Ahmia</li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="http://6yuym3ofnhyanqea3sctvdrd3iq7jregp6nhud3axgwipva4wp6ix4id.onion/" target="_blank">http://6yuym3ofnhyanqea3sctvdrd3iq7jregp6nhud3axgwipva4wp6ix4id.onion/</a> &#45; Torch</li>
@@ -616,7 +616,7 @@
                 <div class="secao__conteudo">      
                     <h3 class="conteudo__subtitulo">Browsers</h3>
                     <ul class="conteudo__lista">
-                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://librewolf.net/" target="_blank">LibreWolf</a> &#45; navegador derivado do Mozilla, focado em privacidade</li>
+                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://librewolf.net/" target="_blank">LibreWolf</a> &#45; navegador derivado do Firefox, focado em privacidade</li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.tunnelbear.com/" target="_blank">TunnelBear</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://brave.com/pt-br/" target="_blank">Brave</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://mullvad.net/pt/browser" target="_blank">Mullvad</a></li>
