--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://pt-br.react.dev/" target="_blank">React.js (pt)</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://vue-community.org/guide/learning/official-documentation.html" target="_blank">Vue.js</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.electronjs.org/" target="_blank">Electron.js</a></li>
-                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.npmjs.com/" target="_blank">NPM</a></li>
+                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.npmjs.com/" target="_blank">npm</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://yarnpkg.com/" target="_blank">Yarn</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://beautifier.io/" target="_blank">js-beautify</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://github.com/airbnb/javascript" target="_blank">Airbnb JavaScript Style Guide</a></li>
