--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                 <div class="secao__conteudo">      
                     <h3 class="conteudo__subtitulo">Misc</h3>
                     <ul class="conteudo__lista">
+                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.markdownguide.org/" target="_blank">The Markdown Guide</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://regexr.com/" target="_blank">RegExr</a> &#45; site para manipular expressões regulares</li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://regex101.com/" target="_blank">regex101</a> &#45; site para manipular expressões regulares</li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://web.dev/howbrowserswork/" target="_blank">How browsers work (texto &#45; en)</a></li>
