--- a/index.html
+++ b/index.html
@@ -256,7 +256,10 @@
                 <div class="secao__conteudo">      
                     <h3 class="conteudo__subtitulo">Cursos e tutoriais</h3>
                     <ul class="conteudo__lista">
-                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank">A complete guide to Flexbox (texto &#45; en)</a></li>
+                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank">A Complete Guide to Flexbox (texto &#45; en)</a></li>
+                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">A Complete Guide to CSS Grid (texto &#45; en)</a></li>
+                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.origamid.com/projetos/css-grid-layout-guia-completo/" target="_blank">Guia CSS Grid Layout (texto &#45; pt)</a></li>
+                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://yoksel.github.io/flex-cheatsheet/" target="_blank">Flexbox Cheatsheet</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://medium.com/collabcode/pare-de-chutar-e-aprenda-como-funciona-o-display-inline-block-4e6cba2f19d4" target="_blank">Pare de chutar e aprenda como funciona o display: inline-block</a></li>
                     </ul>
                 </div>
@@ -303,9 +306,9 @@
                 <div class="secao__conteudo">      
                     <h3 class="conteudo__subtitulo">Imagens</h3>
                     <ul class="conteudo__lista">
-                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://penpot.app/" target="_blank">Penpot</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://openclipart.org/" target="_blank">Open CLip Art</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://pixabay.com/" target="_blank">Pixabay</a></li>
+                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.pngwing.com/pt" target="_blank">pngWing</a></li>
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://pngtree.com/" target="_blank">pngtree</a></li>
                     </ul>
                 </div>
@@ -313,6 +316,7 @@
                     <h3 class="conteudo__subtitulo">Design de Interface</h3>
                     <ul class="conteudo__lista">
                         <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://www.figma.com/" target="_blank">Figma</a></li>
+                        <li class="conteudo__lista__item"><a class="conteudo__item__link" href="https://penpot.app/" target="_blank">Penpot</a></li>
                     </ul>
                 </div>
                 <div class="secao__conteudo">      
